@@ -1,5 +1,6 @@
 *Version 3.3.4*
-* Export publishers in ni
+* Export publishers in nightly backup
+* Add INFO level log message to indicate end of configuration backup task
 
 *Version 3.3.3*
 * Fix bug where data point tags were not exported when using the search-and-export feature of the data point tables on the Data Source Edit page
